
[package]
name = "blok"
description = "3D arrays that matter"
authors = ["j-stach"]
version = "0.0.2"
edition = "2021"
repository = "https://github.com/j-stach/blok"
license = "MIT OR Apache-2.0"
readme = "README.md"


[dependencies]
anyhow = "1.0.82"
derive_more = "0.99.17"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive"] }


[dev-dependencies]
anal-eyes = "0.0.1"

[[test]]
name = "tests"
path = "test/mod.rs"

#[[test]]
#name = "layout_test"
#path = "test/order/layout.rs"
#
#[[test]]
#name = "block_test_1"
#path = "test/block/block1.rs"
#
#[[test]]
#name = "row_test"
#path = "test/types/row/row.rs"
#
