
[package]
name = "blok"
description = "3D arrays that matter"
authors = ["j-stach"]
version = "0.0.21"
edition = "2021"
repository = "https://github.com/j-stach/blok"
license = "MIT OR Apache-2.0"
readme = "README.md"


[dependencies]
anyhow = "1.0.82"
derive_more = "0.99.17"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive"] }


[[test]]
name = "tests"
path = "test/mod.rs"

